; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_jme.c_jme_start_pcc_timer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_jme.c_jme_start_pcc_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jme_adapter = type { %struct.dynpcc_info }
%struct.dynpcc_info = type { i64, i32, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@JME_TMCSR = common dso_local global i32 0, align 4
@TMCSR_EN = common dso_local global i32 0, align 4
@PCC_INTERVAL_US = common dso_local global i32 0, align 4
@TMCSR_CNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.jme_adapter*)* @jme_start_pcc_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jme_start_pcc_timer(%struct.jme_adapter* %0) #0 {
  %2 = alloca %struct.jme_adapter*, align 8
  %3 = alloca %struct.dynpcc_info*, align 8
  %4 = alloca %struct.TYPE_2__, align 4
  %5 = alloca %struct.TYPE_2__, align 4
  store %struct.jme_adapter* %0, %struct.jme_adapter** %2, align 8
  %6 = load %struct.jme_adapter*, %struct.jme_adapter** %2, align 8
  %7 = getelementptr inbounds %struct.jme_adapter, %struct.jme_adapter* %6, i32 0, i32 0
  store %struct.dynpcc_info* %7, %struct.dynpcc_info** %3, align 8
  %8 = load %struct.jme_adapter*, %struct.jme_adapter** %2, align 8
  %9 = call i64 @NET_STAT(%struct.jme_adapter* %8)
  %10 = bitcast %struct.TYPE_2__* %4 to i64*
  store i64 %9, i64* %10, align 4
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.dynpcc_info*, %struct.dynpcc_info** %3, align 8
  %14 = getelementptr inbounds %struct.dynpcc_info, %struct.dynpcc_info* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 4
  %15 = load %struct.jme_adapter*, %struct.jme_adapter** %2, align 8
  %16 = call i64 @NET_STAT(%struct.jme_adapter* %15)
  %17 = bitcast %struct.TYPE_2__* %5 to i64*
  store i64 %16, i64* %17, align 4
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.dynpcc_info*, %struct.dynpcc_info** %3, align 8
  %21 = getelementptr inbounds %struct.dynpcc_info, %struct.dynpcc_info* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 8
  %22 = load %struct.dynpcc_info*, %struct.dynpcc_info** %3, align 8
  %23 = getelementptr inbounds %struct.dynpcc_info, %struct.dynpcc_info* %22, i32 0, i32 0
  store i64 0, i64* %23, align 8
  %24 = load %struct.jme_adapter*, %struct.jme_adapter** %2, align 8
  %25 = load i32, i32* @JME_TMCSR, align 4
  %26 = load i32, i32* @TMCSR_EN, align 4
  %27 = load i32, i32* @PCC_INTERVAL_US, align 4
  %28 = sub nsw i32 16777215, %27
  %29 = load i32, i32* @TMCSR_CNT, align 4
  %30 = and i32 %28, %29
  %31 = or i32 %26, %30
  %32 = call i32 @jwrite32(%struct.jme_adapter* %24, i32 %25, i32 %31)
  ret void
}

declare dso_local i64 @NET_STAT(%struct.jme_adapter*) #1

declare dso_local i32 @jwrite32(%struct.jme_adapter*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
